# garvSynth

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: get_cpm.cmake
plugin/: CMakeLists.txt
